# Sophonic

./: .env.example  README.md  pyproject.toml
.claude/: settings.local.json
docs/superpowers/specs/: 2026-05-18-gitlab-skill-design.md
src/akashic/: __init__.py  browser.py  cli.py  config.py  dates.py  google_auth.py  llm.py  mcp_server.py  paths.py
src/akashic/tools/: __init__.py  gcal.py  gmail.py  obsidian.py  reminders.py  slack_web.py  zoom.py
src/sophonic/: browser.py  cli.py  config.py  google_auth.py  llm.py  mcp_server.py  paths.py  skills.py
src/sophonic/skills/gcal/: SKILL.md
src/sophonic/skills/gitlab/: SKILL.md
src/sophonic/skills/gmail/: SKILL.md
src/sophonic/skills/obsidian/: SKILL.md
src/sophonic/skills/obsidian/templates/: daily.md.j2  meeting.md.j2
src/sophonic/skills/reminders/: SKILL.md
src/sophonic/skills/slack/: SKILL.md
src/sophonic/skills/zoom/: SKILL.md
src/sophonic/tools/: __init__.py  gcal.py  gitlab.py  gmail.py  obsidian.py  reminders.py  slack_web.py  zoom.py
tests/: conftest.py  test_config.py  test_dates.py  test_gcal.py  test_gitlab.py  test_gmail.py  test_llm_schema.py  test_mcp.py  test_obsidian.py  test_reminders.py  test_skills.py  test_slack.py  test_zoom.py
