[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "sophonic"
version = "0.1.0"
description = "Obsidian-native AI assistant (CLI + MCP)"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "anthropic>=0.49.0",
    "mcp[cli]>=1.6.0",
    "typer>=0.15.0",
    "rich>=13.0.0",
    "pydantic>=2.0.0",
    "dateparser>=1.2.0",
    "google-api-python-client>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-auth-httplib2>=0.2.0",
    "playwright>=1.50.0",
    "keyring>=25.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "freezegun>=1.4.0",
]

[project.scripts]
sophonic = "sophonic.cli:app"
sophonic-mcp = "sophonic.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/sophonic"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pytest>=9.0.3",
    "pytest-asyncio>=1.3.0",
]
